# devhome

./: README.rst  pyproject.toml
docs/: RoadMap.rst  RoadMapInfo.rst  timesheet.rst
docs/LADR/: LADR_001.rst  LADR_002.rst
src/: main.py
