[tool.poetry]
name = "devhome"
version = "0.1.0"
description = "A tool to help bootstrap my development projects"
authors = ["Peter Bowman <bowmanpete123@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
plotext = "^5.2.8"
textual = "^0.30.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
